[project]
name = "dexp"
version = "0.1.0"
description = "Logistics Data Explorer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ['streamlit>=1.0.0',
                'pandas>=1.0.0',
                'numpy>=1.18.0',
                'sqlalchemy>=1.4.0',
                'fastapi>=0.104.0',
                'uvicorn>=0.24.0']

[project.scripts]
run_ui = "ux.src.__app__:run"
test_db = "database.src.__db__:test"
test_db_api = "database.src.__db_api__:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ux", "database"]